// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CautionaryContactView component when logged in as an operative and has NO queries should render properly: with NO highlithed codes 1`] = `
<DocumentFragment>
  <a
    class="govuk-back-link lbh-back-link govuk-!-display-none-print"
    role="button"
  >
    Back
  </a>
  <h3
    class="lbh-heading-h3"
  >
    Cautionary contact
  </h3>
  <table
    class="govuk-table lbh-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row lbh-body"
      >
        <th
          class="govuk-table__header"
          scope="col"
        >
          Code
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Description
        </th>
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
        data-row-id="0"
      >
        <td
          class="govuk-table__cell"
        >
          DAT
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] Dangerous Animals
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="1"
      >
        <td
          class="govuk-table__cell"
        >
          CFT
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] No Female Staff to Visit
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="2"
      >
        <td
          class="govuk-table__cell"
        >
          CIT
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] No Lone Interviews
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="3"
      >
        <td
          class="govuk-table__cell"
        >
          CVT
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] No Lone Visits
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="4"
      >
        <td
          class="govuk-table__cell"
        >
          OIT
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] Other Type of Incident
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="5"
      >
        <td
          class="govuk-table__cell"
        >
          PAT
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] Physical Abuse or Threat of
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="6"
      >
        <td
          class="govuk-table__cell"
        >
          SAT
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] Seek Advice
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="7"
      >
        <td
          class="govuk-table__cell"
        >
          UET
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] Unclean / Unsafe Environment
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="8"
      >
        <td
          class="govuk-table__cell"
        >
          VAT
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] Verbal Abuse or Threat of
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="9"
      >
        <td
          class="govuk-table__cell"
        >
          COR
        </td>
        <td
          class="govuk-table__cell"
        >
          ASBO or injunction obtained
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="10"
      >
        <td
          class="govuk-table__cell"
        >
          DA
        </td>
        <td
          class="govuk-table__cell"
        >
          Dangerous Animals
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="11"
      >
        <td
          class="govuk-table__cell"
        >
          CX
        </td>
        <td
          class="govuk-table__cell"
        >
          Do Not Attend - Refer to Authorising Officer
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="12"
      >
        <td
          class="govuk-table__cell"
        >
          DV
        </td>
        <td
          class="govuk-table__cell"
        >
          Domestic Violence
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="13"
      >
        <td
          class="govuk-table__cell"
        >
          CF
        </td>
        <td
          class="govuk-table__cell"
        >
          No Female Staff to Visit
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="14"
      >
        <td
          class="govuk-table__cell"
        >
          CI
        </td>
        <td
          class="govuk-table__cell"
        >
          No Lone Interviews
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="15"
      >
        <td
          class="govuk-table__cell"
        >
          CV
        </td>
        <td
          class="govuk-table__cell"
        >
          No Lone Visits
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="16"
      >
        <td
          class="govuk-table__cell"
        >
          OI
        </td>
        <td
          class="govuk-table__cell"
        >
          Other Type of Incident
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="17"
      >
        <td
          class="govuk-table__cell"
        >
          PA
        </td>
        <td
          class="govuk-table__cell"
        >
          Physical Abuse or Threat of
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="18"
      >
        <td
          class="govuk-table__cell"
        >
          SA
        </td>
        <td
          class="govuk-table__cell"
        >
          Seek Advice
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="19"
      >
        <td
          class="govuk-table__cell"
        >
          SPR
        </td>
        <td
          class="govuk-table__cell"
        >
          Specific Requirements
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="20"
      >
        <td
          class="govuk-table__cell"
        >
          CXT
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] Do Not Attend - Refer to Authorising Officer
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="21"
      >
        <td
          class="govuk-table__cell"
        >
          TRA
        </td>
        <td
          class="govuk-table__cell"
        >
          Translation Required
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="22"
      >
        <td
          class="govuk-table__cell"
        >
          UE
        </td>
        <td
          class="govuk-table__cell"
        >
          Unclean / Unsafe Environment
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="23"
      >
        <td
          class="govuk-table__cell"
        >
          VA
        </td>
        <td
          class="govuk-table__cell"
        >
          Verbal Abuse or Threat of
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`CautionaryContactView component when logged in as an operative and has queries should render properly: with highlithed codes 1`] = `
<DocumentFragment>
  <a
    class="govuk-back-link lbh-back-link govuk-!-display-none-print"
    role="button"
  >
    Back
  </a>
  <h3
    class="lbh-heading-h3"
  >
    Cautionary contact
  </h3>
  <table
    class="govuk-table lbh-table"
  >
    <thead
      class="govuk-table__head"
    >
      <tr
        class="govuk-table__row lbh-body"
      >
        <th
          class="govuk-table__header"
          scope="col"
        >
          Code
        </th>
        <th
          class="govuk-table__header"
          scope="col"
        >
          Description
        </th>
      </tr>
    </thead>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
        data-row-id="0"
      >
        <td
          class="govuk-table__cell highlight-for-existing-code"
        >
          DAT
        </td>
        <td
          class="govuk-table__cell highlight-for-existing-code"
        >
          [Temporary] Dangerous Animals
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="1"
      >
        <td
          class="govuk-table__cell"
        >
          CFT
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] No Female Staff to Visit
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="2"
      >
        <td
          class="govuk-table__cell highlight-for-existing-code"
        >
          CIT
        </td>
        <td
          class="govuk-table__cell highlight-for-existing-code"
        >
          [Temporary] No Lone Interviews
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="3"
      >
        <td
          class="govuk-table__cell"
        >
          CVT
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] No Lone Visits
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="4"
      >
        <td
          class="govuk-table__cell"
        >
          OIT
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] Other Type of Incident
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="5"
      >
        <td
          class="govuk-table__cell"
        >
          PAT
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] Physical Abuse or Threat of
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="6"
      >
        <td
          class="govuk-table__cell"
        >
          SAT
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] Seek Advice
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="7"
      >
        <td
          class="govuk-table__cell"
        >
          UET
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] Unclean / Unsafe Environment
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="8"
      >
        <td
          class="govuk-table__cell"
        >
          VAT
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] Verbal Abuse or Threat of
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="9"
      >
        <td
          class="govuk-table__cell"
        >
          COR
        </td>
        <td
          class="govuk-table__cell"
        >
          ASBO or injunction obtained
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="10"
      >
        <td
          class="govuk-table__cell"
        >
          DA
        </td>
        <td
          class="govuk-table__cell"
        >
          Dangerous Animals
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="11"
      >
        <td
          class="govuk-table__cell"
        >
          CX
        </td>
        <td
          class="govuk-table__cell"
        >
          Do Not Attend - Refer to Authorising Officer
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="12"
      >
        <td
          class="govuk-table__cell"
        >
          DV
        </td>
        <td
          class="govuk-table__cell"
        >
          Domestic Violence
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="13"
      >
        <td
          class="govuk-table__cell"
        >
          CF
        </td>
        <td
          class="govuk-table__cell"
        >
          No Female Staff to Visit
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="14"
      >
        <td
          class="govuk-table__cell"
        >
          CI
        </td>
        <td
          class="govuk-table__cell"
        >
          No Lone Interviews
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="15"
      >
        <td
          class="govuk-table__cell"
        >
          CV
        </td>
        <td
          class="govuk-table__cell"
        >
          No Lone Visits
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="16"
      >
        <td
          class="govuk-table__cell"
        >
          OI
        </td>
        <td
          class="govuk-table__cell"
        >
          Other Type of Incident
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="17"
      >
        <td
          class="govuk-table__cell"
        >
          PA
        </td>
        <td
          class="govuk-table__cell"
        >
          Physical Abuse or Threat of
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="18"
      >
        <td
          class="govuk-table__cell"
        >
          SA
        </td>
        <td
          class="govuk-table__cell"
        >
          Seek Advice
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="19"
      >
        <td
          class="govuk-table__cell"
        >
          SPR
        </td>
        <td
          class="govuk-table__cell"
        >
          Specific Requirements
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="20"
      >
        <td
          class="govuk-table__cell"
        >
          CXT
        </td>
        <td
          class="govuk-table__cell"
        >
          [Temporary] Do Not Attend - Refer to Authorising Officer
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="21"
      >
        <td
          class="govuk-table__cell"
        >
          TRA
        </td>
        <td
          class="govuk-table__cell"
        >
          Translation Required
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="22"
      >
        <td
          class="govuk-table__cell"
        >
          UE
        </td>
        <td
          class="govuk-table__cell"
        >
          Unclean / Unsafe Environment
        </td>
      </tr>
      <tr
        class="govuk-table__row"
        data-row-id="23"
      >
        <td
          class="govuk-table__cell highlight-for-existing-code"
        >
          VA
        </td>
        <td
          class="govuk-table__cell highlight-for-existing-code"
        >
          Verbal Abuse or Threat of
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
